--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             </p>
             <!-- mb-5 gives extra margin spacing under lead text -->
             <p class="lead mb-5">Let's create something amazing together!</p>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Subscribe to my newsletter!
+              </button>
         </div>
     </section>
 </header>
@@ -204,6 +207,32 @@
         </div>
     </div>
  </footer>
+ <!-- for modal button -->
+ <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Subscribe</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form>
+                <div class="mb-3">
+                  <label for="name" class="col-form-label">Name</label>
+                  <input type="text" class="form-control" id="name">
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="col-form-label">Email</label>
+                  <input type="email" class="form-control" id="email">
+                </div>
+              </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Sign Up!</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
