--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Mei Wong | Software Developer</title>
      <!-- Bootstrap link for CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- css stylesheet link -->
+     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -216,20 +218,22 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <form>
-                <div class="mb-3">
-                  <label for="name" class="col-form-label">Name</label>
-                  <input type="text" class="form-control" id="name">
-                </div>
-                <div class="mb-3">
-                  <label for="email" class="col-form-label">Email</label>
-                  <input type="email" class="form-control" id="email">
-                </div>
-              </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Sign Up!</button>
-        </div>
+                <p>Join my newsletter for the latest updates on my projects, coding tips, and industry insights delivered straight to your inbox.</p>
+                <form class="row g-3">
+                    <div class="col-lg-6">
+                      <label for="inputName" class="form-label">Name</label>
+                      <input type="text" class="form-control" id="inputName">
+                    </div>
+                    <div class="col-lg-6">
+                      <label for="inputEmail" class="form-label">Email</label>
+                      <input type="email" class="form-control" id="inputEmail">
+                    </div>
+                    <div class="col-12 mb-4">
+                        <button type="submit" class="btn btn-primary">
+                            Sign up!
+                        </button>
+                    </div>
+                  </form>
       </div>
     </div>
   </div>
