--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </p>
             <!-- mb-5 gives extra margin spacing under lead text -->
             <p class="lead mb-5">Let's create something amazing together!</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Subscribe to my newsletter!
               </button>
         </div>
@@ -110,7 +110,7 @@
             </div>
             <!-- cols for cards -->
             <div class="col-12 col-md-6">
-                <div class="card mb-3">
+                <div class="card mb-3 sharp-corners">
                     <img src="assets/images/wags-and-walks.webp" class="card-img-top"
                         alt="A man walking several dogs early in the morning">
                     <div class="card-body">
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <div class="card mb-3">
+                <div class="card mb-3 sharp-corners">
                     <img src="assets/images/we-wellness.webp" class="card-img-top"
                         alt="A spa with candles towels and natural material">
                     <div class="card-body">
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <div class="card mb-3">
+                <div class="card mb-3 sharp-corners">
                     <img src="assets/images/math-wiz.webp" class="card-img-top"
                         alt="A child practicing math at a computer">
                     <div class="card-body">
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <div class="card mb-3">
+                <div class="card mb-3 sharp-corners">
                     <img src="assets/images/bmi-calculator.webp" class="card-img-top"
                         alt="Weighing scales seen from the first person view of the person standing on the scales">
                     <div class="card-body">
@@ -186,23 +186,23 @@
         <div class="col-12 col-md-10 col-lg-8 mb-4">
             <!-- add your form here -->
             <form class="row g-3">
-                <div class="col-lg-4">
+                <div class="col-lg-4 sharp-corners">
                   <label for="name" class="form-label">Full name</label>
                   <input type="text" class="form-control" id="full-name">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 sharp-corners">
                   <label for="phonenumber" class="form-label">Phone number</label>
                   <input type="number" class="form-control" id="phonenumber">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 sharp-corners">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" id="email">
                   </div>
-                  <div class="col-12"></div>
+                  <div class="col-12 sharp-corners"></div>
                     <label for="message" class="form-label">Message</label>
                     <textarea class="form-control" id="message" rows="3"> </textarea>
                   </div>
-                <div class="col-12">
+                <div class="col-12 sharp-corners">
                   <button type="submit" class="btn btn-primary">Send</button>
                 </div>
               </form>
@@ -210,7 +210,7 @@
     </div>
  </footer>
  <!-- for modal button -->
- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+ <div class="modal fade sharp-corners" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
